cloudnova-k8s-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudnova-ingress
  namespace: cloudnova
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cloudnova.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudnova-service
            port:
              number: 80
